--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@jup-ag/common": "^6.1.0",
+    "@jup-ag/core": "4.0.0-beta.21",
     "@solana/actions": "^1.6.5",
+    "@solana/spl-token": "^0.4.9",
+    "@solana/spl-token-registry": "^0.2.4574",
     "@solana/web3.js": "^1.95.4",
+    "jsbi": "^4.3.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
