--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "dependencies": {
     "@jup-ag/common": "^6.1.0",
     "@jup-ag/core": "4.0.0-beta.21",
+    "@metaplex-foundation/js": "^0.20.1",
+    "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
+    "@metaplex-foundation/umi": "^0.9.2",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
+    "@metaplex-foundation/umi-web3js-adapters": "^0.9.2",
+    "@metaplex/js": "^4.12.0",
     "@solana/actions": "^1.6.5",
     "@solana/spl-token": "^0.4.9",
     "@solana/spl-token-registry": "^0.2.4574",
