--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@metaplex/js": "^4.12.0",
     "@solana/actions": "^1.6.5",
     "@solana/spl-token": "^0.4.9",
+    "@solana/spl-token-metadata": "^0.1.6",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/web3.js": "^1.95.4",
     "jsbi": "^4.3.0",
